# trustzone-testing

boards/: .gitignore  Cargo.toml
boards/bootloaders/nrf9160/: Cargo.toml
boards/bootloaders/nrf9160/non_secure/: Cargo.toml  build.rs
boards/bootloaders/nrf9160/non_secure/src/: lib.rs
boards/bootloaders/nrf9160/secure/: Cargo.toml  build.rs
boards/bootloaders/nrf9160/secure/src/: main.rs
boards/bootloaders/stm32f446/src/: main.rs
boards/firmware/nrf9160/boot_fw_blinky_green/: Cargo.toml
boards/firmware/nrf9160/boot_fw_blinky_green/src/: main.rs
boards/firmware/nrf9160/updt_fw_blinky_red/: Cargo.toml
boards/firmware/nrf9160/updt_fw_blinky_red/src/: main.rs
boards/hal/: Cargo.toml  build.rs
boards/hal/src/: lib.rs
boards/hal/src/nrf/: mod.rs  nrf9160.rs
boards/tools/trustzone-m-tools/secure-rt/: Cargo.toml
boards/tools/trustzone-m-tools/secure-rt/src/: lib.rs  nrf.rs
boards/tools/trustzone-m-tools/tools/src/: bindings_generator.rs
boards/update/: Cargo.toml
boards/update/src/update/: update_flash.rs
rustBoot/: Cargo.toml
rustBoot/src/: constants.rs
rustBoot/src/image/: image.rs
xtask/: Cargo.toml
xtask/src/: main.rs
