[workspace]

resolver = "2"
members = ["update",
           "hal", 
           "firmware/*/*", 
           "bootloaders/*",
           "bootloaders/nrf9160/secure",
           "bootloaders/nrf9160/non_secure", 
           ]

exclude = ["firmware/rpi4", "bootloaders/nrf9160", "tools/trustzone-m-tools"]

[profile.dev]
incremental = false
codegen-units = 1
debug = true
lto = false

[profile.release]
# debug = true
lto = true
opt-level = "s"